--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.12.3",
     "@next/font": "^14.2.15",
     "@splinetool/react-spline": "^4.0.0",
     "gsap": "^3.12.7",
