--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "@next/font": "^14.2.15",
+    "@rive-app/react-canvas": "^4.18.2",
     "@splinetool/react-spline": "^4.0.0",
     "gsap": "^3.12.7",
     "next": "15.0.3",
